// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`在开始位置使用 1`] = `
.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-right: 8px;
}

[disabled] > .c0 {
  color: rgba(0,0,0,0.38);
}

<div
  className="c0 sinoui-input-adornment sinoui-input-adornment--start"
>
  <p>
    装饰器
  </p>
</div>
`;

exports[`在结束位置使用 1`] = `
.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-left: 8px;
}

[disabled] > .c0 {
  color: rgba(0,0,0,0.38);
}

<div
  className="c0 sinoui-input-adornment sinoui-input-adornment--end"
>
  <p>
    装饰器
  </p>
</div>
`;

exports[`显示文本装饰器 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  text-align: left;
  color: inherit;
}

.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-left: 8px;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

[disabled] > .c0 {
  color: rgba(0,0,0,0.38);
}

<div
  className="c0 sinoui-input-adornment sinoui-input-adornment--end"
>
  <p
    className="c1 sinoui-typography sinoui-typography--body1"
    color="inherit"
    type="body1"
  >
    装饰器
  </p>
</div>
`;

exports[`替换根元素 1`] = `
.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-right: 8px;
}

[disabled] > .c0 {
  color: rgba(0,0,0,0.38);
}

<p
  className="c0 sinoui-input-adornment sinoui-input-adornment--start"
>
  <p>
    装饰器
  </p>
</p>
`;

exports[`禁止点击事件 1`] = `
.c0 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.01em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 2em;
  white-space: nowrap;
  color: rgba(0,0,0,0.6);
  margin-right: 8px;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

[disabled] > .c0 {
  color: rgba(0,0,0,0.38);
}

<div
  className="c0 sinoui-input-adornment sinoui-input-adornment--start"
>
  <p>
    装饰器
  </p>
</div>
`;
